# teawieAPI

./: .editorconfig  .env.template  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  biome.json  build.ts  deno.json  flake.nix  main.ts  package.json  pnpm-lock.yaml  treefmt.nix  tsconfig.json  wrangler.toml
.github/: dependabot.yml
.github/workflows/: autobot.yaml  ci.yaml  clippy.yaml  codeql.yaml  deploy.yaml  deploy.yml  docker.yaml  eslint.yaml  lint.yml  treefmt.yaml  update-flake.yaml
lib/: consts.ts  mod.ts  schemas.ts  teawie.ts
nix/: default.nix  module.nix  package.nix  static.nix
server/: Cargo.toml
server/src/: main.rs
src/: consts.ts  env.ts  globals.d.ts  index.ts  schemas.ts  teawie.ts  worker.ts
teawie-api/: Cargo.toml
teawie-api/src/: lib.rs  state.rs
teawie-api/src/http/: github.rs  mod.rs  teawie_archive.rs
teawie-api/src/model/: mod.rs
teawie-api/src/routes/: list_teawies.rs  mod.rs  not_found.rs  random_teawie.rs  root.rs
teawie_api/: Cargo.toml
teawie_api/src/: lib.rs
teawie_api/src/api/: mod.rs  teawie_archive.rs
teawie_api/src/http/: mod.rs  teawie_archive.rs
teawie_api/src/router/: app_state.rs  middleware.rs  mod.rs  state.rs
teawie_api/src/router/routes/: list_teawies.rs  random_teawie.rs  root.rs
teawie_api/src/routes/: list_teawies.rs  mod.rs  not_found.rs  random_teawie.rs  root.rs
