[workspace]
resolver = "2"
members = [
	"teawie_api",
	"server",
]

[workspace.dependencies]
axum = { version = "0.7.5", default-features = false, features = [
	"form",
	"http1",
	"http2",
	"json",
	"macros",
	"matched-path",
	"original-uri",
	"query",
	"tower-log",
	"tracing"
] }
getrandom = "0.2.14"
time = "0.3.36"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
