[package]
name = "teawie-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Shared router for teawieAPI"
repository.workspace = true
publish = false

[dependencies]
axum.workspace = true
futures = "0.3.30"
log.workspace = true
octocrab = { version = "0.38.0", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.5", default-features = false, features = [
	"charset",
	"http2",
	"json",
	"macos-system-configuration",
	"rustls-tls"
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["cors", "timeout", "trace"] }

[lints]
workspace = true
