[package]
name = "teawie_api"
version = "0.1.0"
authors = ["Seth <getchoo at tuta dot io>"]
edition = "2021"
description = "okay so like basically, it's just a web service for teawie stuff (so cool!!)"
repository = "https://github.com/getchoo/teawieAPI"

[dependencies]
axum = { workspace = true }
futures = "0.3.30"
octocrab = { version = "0.38.0", default-features = false }
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = [
	"charset",
	"http2",
	"json",
	"macos-system-configuration",
	"rustls-tls"
] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tower-http = { version = "0.5.2", features = ["cors", "timeout", "trace"] }
tracing = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
